@@ -13,8 +13,6 @@ AC_SET_MAKE
 AC_PROG_INSTALL
 AM_PATH_LISPDIR
 
-EMACS=`basename $EMACS`
-
 AC_CHECK_PROGS(DVIPS, dvips, no)
 AC_CHECK_PROGS(LATEX, latex latex2e, no)
 AC_PATH_PROG(MAKEINFO, makeinfo, no)
